2009-07-28  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/alert_list.php, include/functions_agents.php: changes
	for to add filter (and html form to set filter) in the list of alerts. 
	* include/styles/pandora.css, include/functions_html.php: minor changes to
	fix minor bug css and clean the source code.
	
2009-07-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php: changes for support maps as widget in
	dashboard of Pandora Enterprise.
	* include/Image/image_functions.php: script content functions and code
	for manage image thumbnails and resize images.

2009-07-24  Miguel de Dios  <miguel.dedios@artica.es>

	* index.php: fix mistake, add lost lines between my "dirty installation" and
	"clean project". 
	Fixes: 2826478

2009-07-23  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_components_form.php: add comments for
	clarify mecanics of code, and add default group when choose make new
	WMI.
	* godmode/modules/manage_network_components_form_wmi.php: fix the bug,
	change files to add the html table, it was a probably typing mistake.
	Fixes: 2808211

2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/tactical.php: fix bug, and now show another column
	with the type of server.
	Fixes: 2825426

2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_templates_form.php: fix bug that the column
	group had incorrect content.
	Fixes: 2815118

2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>

	* general/header.php, images/lupa_15x15.png, include/functions_html.php
	include/styles/pandora.css, operation/search_results.php: add global
	search bar in the header for searching Agents, Maps, Reports, Graphs,
	Alerts and Users...if you user have access level...

2009-07-20  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/tactical.php, operation/agentes/status_monitor.php: add
	link to list monitors "not init".
	Fixes: 2815098
